--- a/Ubik.UI.MVC/Areas/Backoffice/Content/css/AdminLTE_Overrides.css
+++ b/Ubik.UI.MVC/Areas/Backoffice/Content/css/AdminLTE_Overrides.css
@@ -2,16 +2,23 @@
     list-style: none !important;
 }
 
-
 .form-group .form-control.input-validation-error {
-  border-color: #f56954 !important;
-  box-shadow: none;
+    border-color: #f56954 !important;
+    box-shadow: none;
 }
 
 .form-group span.field-validation-error {
-  color: #f56954;
+    color: #f56954;
 }
 
 .table-responsive {
     overflow-x: hidden;
+}
+
+.box .box-header div {
+    padding: 10px;
+}
+
+.box .box-header .btn-primary {
+    color: #fff;
 }
