--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Roles.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Roles.cshtml
@@ -1,17 +1,15 @@
 ﻿@using Ubik.Web.Auth.ViewModels
 @{
     var isDetail = false;
-    IEnumerable<RoleViewModel> rows;
-    RoleViewModel detail;
     if (Model.GetType() == typeof (RoleViewModel))
     {
         isDetail = true;
-        detail = Model as RoleViewModel;
+        var detail = Model as RoleViewModel;
         Html.RenderPartial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleDetails.cshtml", detail);
     }
     else
     {
-        rows = Model as IEnumerable<RoleViewModel>;
+        var rows = Model as IEnumerable<RoleViewModel>;
         Html.RenderPartial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleList.cshtml", rows);
     }
 }
