--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewUser.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewUser.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ubik.Web.Auth.ViewModels
-@model UserViewModel 
+@model NewUserViewModel
 <!-- Right side column. Contains the navbar and content of the page -->
 <aside class="right-side">
     <!-- Content Header (Page header) -->
@@ -27,7 +27,7 @@
                     </div>
                 </div>*@<!-- /.box-header -->
             <!-- form start -->
-            @using (Html.BeginForm("UpdateUser", "UserAdministration", FormMethod.Post, new { role = "form" }))
+            @using (Html.BeginForm("CreateUser", "UserAdministration", FormMethod.Post, new { role = "form" }))
             {
                 @Html.AntiForgeryToken()
                                 <!-- left column -->
@@ -42,12 +42,20 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">@Html.LabelFor(m => m.UserName)</span>
-
                                 @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-
                             </div>
                             @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "" })
                         </div>
+                        
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">@Html.LabelFor(m => m.Password)</span>
+                                @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                            </div>
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "" })
+                        </div>
+                        
+                       
                         <div class="form-group">
                             @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml", Model)
                         </div>
