--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ubik.Web.Auth.ViewModels
-@model UserViewModel
+@model IHasRolesToSelect
 <div class="box box-solid">
     <div class="box-header">
         <h3 class="box-title">User Roles</h3>
@@ -28,40 +28,5 @@
                 </div>
             }
         </div>
-    </div>
-    <div class="box-body no-padding">
-        @*<table class="table table-bordered table-striped">
-                <tr>
-                    <th>
-
-                    </th>
-                    @foreach (var operation in operations)
-                    {
-                        <th>
-                            <span>@operation</span>
-                        </th>
-                    }
-                </tr>
-
-                @foreach (var resource in resources)
-                {
-                    <tr>
-                        <td> <strong> @resource</strong></td>
-                        @foreach (var operation in operations)
-                        {
-                            var claim = Model.AvailableClaims.FirstOrDefault(x => x.Value == string.Format("{0}|{1}", operation, resource));
-                            var index = Array.IndexOf(Model.AvailableClaims, claim);
-                            <td data-id="@Model.AvailableClaims[index].Value">
-                                @Html.HiddenFor(m => m.AvailableClaims[index].Value)
-                                @Html.HiddenFor(m => m.AvailableClaims[index].Type)
-                                @Html.HiddenFor(m => m.AvailableClaims[index].ClaimId)
-                                @Html.EditorFor(m => m.AvailableClaims[index].Selected)
-                            </td>
-                        }
-
-                    </tr>
-                }
-
-            </table>*@
     </div>
 </div>
