change user password

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ubik.Web.Auth.ViewModels
-@model IHasRolesToSelect
+@model Ubik.Web.Auth.Contracts.IHasRolesToSelect
 <div class="box box-solid">
     <div class="box-header">
         <h3 class="box-title">User Roles</h3>
