--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewUser.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewUser.cshtml
@@ -26,50 +26,51 @@
                         </div>
                     </div>
                 </div>*@<!-- /.box-header -->
-            <!-- form start -->
-            @using (Html.BeginForm("CreateUser", "UserAdministration", FormMethod.Post, new { role = "form" }))
-            {
-                @Html.AntiForgeryToken()
+            <div class="box box-primary">
+                <!-- form start -->
+                @using (Html.BeginForm("CreateUser", "UserAdministration", FormMethod.Post, new { role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
                                 <!-- left column -->
 
-                <div class="box-body">
-                    <div class="col-md-6">
-                        <div class="form-group hidden">
-                            @Html.LabelFor(m => m.UserId)
-                            @Html.HiddenFor(m => m.UserId, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.UserId, "", new { @class = "" })
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <span class="input-group-addon">@Html.LabelFor(m => m.UserName)</span>
-                                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                    <div class="box-body">
+                        <div class="col-md-6">
+                            <div class="form-group hidden">
+                                @Html.LabelFor(m => m.UserId)
+                                @Html.HiddenFor(m => m.UserId, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.UserId, "", new { @class = "" })
                             </div>
-                            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "" })
-                        </div>
-                        
-                        <div class="form-group">
-                            <div class="input-group">
-                                <span class="input-group-addon">@Html.LabelFor(m => m.Password)</span>
-                                @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">@Html.LabelFor(m => m.UserName)</span>
+                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                                </div>
+                                @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "" })
                             </div>
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "" })
+
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">@Html.LabelFor(m => m.Password)</span>
+                                    @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                                </div>
+                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "" })
+                            </div>
+
+
+                            <div class="form-group">
+                                @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml", Model)
+                            </div>
                         </div>
-                        
-                       
-                        <div class="form-group">
-                            @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml", Model)
+                        <div class="col-md-6"></div>
+                        <div class="box-footer col-md-12">
+                            <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
+
                     </div>
-                    <div class="col-md-6"></div>
-                    <div class="box-footer col-md-12">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
+                }
 
-                </div>
-            }
-
-
-        </div>
+            </div>
+            </div>
     </section><!-- /.content -->
 </aside><!-- /.right-side -->
 
