--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserDetails.cshtml
@@ -1,1 +1,67 @@
-﻿
+﻿@using Ubik.Web.Auth.ViewModels
+@model UserViewModel
+
+<aside class="right-side">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <h1>
+            @PageContent.Current.Title
+            <small>@PageContent.Current.Subtitle</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Implement</a></li>
+            <li><a href="#">the</a></li>
+            <li class="active">breadcrump</li>
+        </ol>
+    </section>
+    <!-- Main content -->
+    <section class="content">
+        <div class="row">
+
+            <!-- general form elements -->
+            @*<div class="col-md-12">
+                    <div class="box box-primary">
+                        <div class="box-header">
+                            <h3 class="box-title">Quick Example</h3>
+                        </div>
+                    </div>
+                </div>*@<!-- /.box-header -->
+            <!-- form start -->
+            <div class="col-md-6">
+                <div class="box box-primary">
+                    @using (Html.BeginForm("UpdateUser", "UserAdministration", FormMethod.Post, new { role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                    <!-- left column -->
+
+                        <div class="box-body">
+
+                            <div class="form-group hidden">
+                                @Html.LabelFor(m => m.UserId)
+                                @Html.HiddenFor(m => m.UserId, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.UserId, "", new { @class = "" })
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">@Html.LabelFor(m => m.UserName)</span>
+                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                                </div>
+                                @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "" })
+                            </div>
+
+                            <div class="form-group">
+                                @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml", Model)
+                            </div>
+                        </div>
+                        <div class="box-footer">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    }
+                </div>
+
+                    @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserChangePassword.cshtml", new UserChangPasswordViewModel() { NewPassword = string.Empty, UserId = Model.UserId, RedirectURL = Request.RawUrl })
+
+                </div>
+        </div>
+    </section><!-- /.content -->
+</aside>
