--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserDetails.cshtml
@@ -42,12 +42,29 @@
                                 @Html.ValidationMessageFor(m => m.UserId, "", new { @class = "" })
                             </div>
                             <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">@Html.LabelFor(m => m.UserName)</span>
+
+                                <div class="input-group ">
+                                    <span class="input-group-addon">
+                                        @{
+                                            var lockStateClass = (Model.IsLockedOut) ? "text-red" : "text-green";
+                                            var lockStateClassIcon = (Model.IsLockedOut) ? "fa fa-lock" : "fa fa-unlock";
+                                        }
+                                        <i class="@lockStateClassIcon @lockStateClass"></i>
+                                        <span class="@lockStateClass">
+                                            @Html.LabelFor(m => m.UserName)
+                                        </span>
+                                    </span>
                                     @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                                    <span class="input-group-btn">
+                                        @(Model.IsLockedOut ?
+                                          Html.ActionLink("Unlock", "UnlockUser", "UserAdministration", new { id = Model.UserId, area = "Backoffice", redirectUrl = Request.RawUrl }, new { @class = "btn  btn-success" }) :
+                                          Html.ActionLink("Lock", "LockUser", "UserAdministration", new { id = Model.UserId, area = "Backoffice", redirectUrl = Request.RawUrl }, new { @class = "btn  btn-warning" })
+                                        )
+                                    </span>
                                 </div>
                                 @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "" })
                             </div>
+
 
                             <div class="form-group">
                                 @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml", Model)
@@ -59,9 +76,9 @@
                     }
                 </div>
 
-                    @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserChangePassword.cshtml", new UserChangPasswordViewModel() { NewPassword = string.Empty, UserId = Model.UserId, RedirectURL = Request.RawUrl })
+                @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserChangePassword.cshtml", new UserChangPasswordViewModel() { NewPassword = string.Empty, UserId = Model.UserId, RedirectURL = Request.RawUrl })
 
-                </div>
+            </div>
         </div>
     </section><!-- /.content -->
 </aside>
