started https://github.com/mitsbits/Ubik/issues/7

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserChangePassword.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserChangePassword.cshtml
@@ -22,23 +22,26 @@
                 @Html.HiddenFor(m => m.UserId, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.UserId, "", new { @class = "" })
             </div>
+            <div class="form-group hidden">
+                @Html.LabelFor(m => m.RedirectURL)
+                @Html.HiddenFor(m => m.RedirectURL, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.RedirectURL, "", new { @class = "" })
+            </div>
             <div class="form-group">
-                <div class="input-group">
-                    <span class="input-group-addon">@Html.LabelFor(m => m.NewPassword)</span>
+                <div class="input-group ">
+                    <span class="input-group-addon">
+                        <i class=""></i>
+                        <span>
+                            @Html.LabelFor(m => m.NewPassword)
+                        </span>
+                    </span>
                     @Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control" })
+                    <span class="input-group-btn">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </span>
                 </div>
                 @Html.ValidationMessageFor(m => m.NewPassword, "", new { @class = "" })
             </div>
-
-
-
-
-
-
         </div>
-        <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-
     }
 </div>
