closing https://github.com/mitsbits/Ubik/issues/7

--- a/Ubik.UI.MVC/Areas/Backoffice/Content/css/AdminLTE_Overrides.css
+++ b/Ubik.UI.MVC/Areas/Backoffice/Content/css/AdminLTE_Overrides.css
@@ -26,3 +26,11 @@ ul .strip-list-style {
 .box .box-header .btn-primary {
     color: #fff;
 }
+
+.alert-pending {
+    background-color: #f9f9f9;
+    border-color: #f9f9f9;
+    color: #333;
+}
+
+#feedbackModal div.modal-header{ border: none;}
