--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
@@ -318,38 +318,6 @@
     @Html.Statics().InlineScripts.Render()
 
 
-    @if (Feedback.Messages.Any())
-    {
-        <div class="modal fade" id="feedbackModal" tabindex="-1" role="dialog" aria-labelledby="feedbackModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    @*<div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="exampleModalLabel">New message</h4>
-                        </div>*@
-                    <div class="modal-body">
-                        @foreach (var message in Feedback.Messages)
-                        {
-                            <p>
-                                <h1>@message.Title <small>@message.Status</small></h1>
-                                <span>@message.Message</span>
-                            </p>
-                        }
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Send message</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script type="text/javascript">
-
-            $('#feedbackModal').modal({
-                    show: true
-                });
-        
-        </script>
-    }
+    @Html.Partial("~/Areas/Backoffice/Views/Shared/Partials/ServerFeedbackModal.cshtml")
 </body>
 </html>
