--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
@@ -14,57 +14,46 @@
             <li class="active">breadcrump</li>
         </ol>
     </section>
-    <!-- Main content -->
+
     <section class="content">
         <div class="row">
-               
-            <!-- general form elements -->
-            @*<div class="col-md-12">
-                    <div class="box box-primary">
-                        <div class="box-header">
-                            <h3 class="box-title">Quick Example</h3>
-                        </div>
-                    </div>
-                </div>*@<!-- /.box-header -->
-            <!-- form start -->
-            @using (Html.BeginForm("UpdateRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                                <!-- left column -->
+            <div class="col-md-6">
+                <div class="box box-primary">
+                    @using (Html.BeginForm("UpdateRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
 
-                <div class="box-body">
-                    <div class="col-md-6">
-                        <div class="form-group hidden">
-                            @Html.LabelFor(m => m.RoleId)
-                            @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
-                        </div>
-                        <div class="form-group control-group">
-                            <div class="input-group">
-                                <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
 
-                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
 
+                        <div class="box-body">
+
+                            <div class="form-group hidden">
+                                @Html.LabelFor(m => m.RoleId)
+                                @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
                             </div>
-                            @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
-                        </div>
-                        <div class="form-group">
-                            @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
-                        </div>
-                    </div>
-                    <div class="col-md-6"></div>
-                    <div class="box-footer col-md-12">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
 
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+
+                                </div>
+                                @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
+                            </div>
+                            <div class="form-group">
+                                @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
+                            </div>
+                        </div>
+                        <div class="box-footer clearfix">
+                            <div class="form-group ">
+                                <button type="submit" class="btn btn-primary pull-right">Submit</button>
+                            </div>
+                        </div>
+
+                    }
                 </div>
-            }
-
-
+            </div>
         </div>
     </section><!-- /.content -->
 </aside><!-- /.right-side -->
-
-
-
-
