--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleCopy.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleCopy.cshtml
@@ -1,30 +1,29 @@
 ﻿@model Ubik.Web.Auth.ViewModels.CopyRoleViewModel
-@using (Html.BeginForm("CopyRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <!-- left column -->
-
-    <div class="box-body">
-        <div class="col-md-6">
-            <div class="form-group hidden">
-                @Html.LabelFor(m => m.RoleId)
-                @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
-            </div>
-            <div class="form-group">
-                <div class="input-group">
-                    <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
-
-                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @readonly = "true" })
-
+<div class="col-md-6">
+    <div class="box box-primary">
+        @using (Html.BeginForm("CopyRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <div class="box-body">
+                <div class="form-group hidden">
+                    @Html.LabelFor(m => m.RoleId)
+                    @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
                 </div>
-                @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
-            </div>
-            <div class="form-group">
-                @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
-            </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
 
+                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @readonly = "true" })
 
+                    </div>
+                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
+                </div>
+                <div class="form-group">
+                    @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
+                </div>
+
+            </div>
             <div class="box-footer">
                 <div class="form-group">
                     <div class="input-group">
@@ -38,6 +37,7 @@
                     @Html.ValidationMessageFor(m => m.Target, "", new { @class = "" })
                 </div>
             </div>
-        </div>
+
+        }
     </div>
-}
+</div>
