--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleDetails.cshtml
@@ -3,37 +3,41 @@
 
 @helper StandardForm()
 {
-    using (Html.BeginForm("UpdateRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="box-body">
-            <div class="col-md-6">
-                <div class="form-group hidden">
-                    @Html.LabelFor(m => m.RoleId)
-                    @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
-
-                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-
+    <div class="col-md-6">
+        <div class="box box-primary">
+            @using (Html.BeginForm("UpdateRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <div class="box-body">
+                    <div class="form-group hidden">
+                        @Html.LabelFor(m => m.RoleId)
+                        @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
                     </div>
-                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
-                </div>
-                <div class="form-group">
-                    @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
-                </div>
-            </div>
-            <div class="col-md-6"></div>
-            <div class="box-footer col-md-12">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
 
+                            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+
+                        </div>
+                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
+                    </div>
+                    <div class="form-group">
+                        @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
+                    </div>
+                </div>
+
+                <div class="box-footer clearfix">
+                    <div class="form-group ">
+                        <button type="submit" class="btn btn-primary pull-right">Submit</button>
+                    </div>
+                </div>
+
+
+            }
         </div>
-    }
+    </div>
 }
 
 @helper ReadOnlyForm()
