--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserDetails.cshtml
@@ -54,7 +54,7 @@
                                             @Html.LabelFor(m => m.UserName)
                                         </span>
                                     </span>
-                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @readonly = "true" })
                                     <span class="input-group-btn">
                                         @(Model.IsLockedOut ?
                                           Html.ActionLink("Unlock", "UnlockUser", "UserAdministration", new { id = Model.UserId, area = "Backoffice", redirectUrl = Request.RawUrl }, new { @class = "btn  btn-success" }) :
