fix for https://github.com/mitsbits/Ubik/issues/8 - datatbles for user list

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserList.cshtml
@@ -32,13 +32,13 @@
                         </div>
                     </div><!-- /.box-header -->
                     <div class="box-body table-responsive">
-                        <table class="table table-hover table-condensed" id="roles-table">
+                        <table class="table table-hover table-condensed" id="users-table">
                             <thead>
                                 <tr>
                                     <th style="width: 40px">#</th>
                                     <th>Name</th>
-                                    <th>Locked - until</th>
                                     <th></th>
+                                  
                                 </tr>
                             </thead>
                             <tbody>
@@ -57,23 +57,22 @@
                                             }
                                             <i class="@lockStateClassIcon @lockStateClass"></i>
                                             <span class="@lockStateClass">
-                                               @Html.ActionLink(user.UserName, "Users", "UserAdministration", new { id = user.UserId, area = "Backoffice" }, null)
+                                                @Html.ActionLink(user.UserName, "Users", "UserAdministration", new { id = user.UserId, area = "Backoffice" }, null)
                                             </span>
-                                            
+
                                         </td>
                                         <td>
-                                          
+
                                             @if (user.IsLockedOut)
                                             {
                                                 @Html.ActionLink("Unlock", "UnlockUser", "UserAdministration", new { id = user.UserId, area = "Backoffice" }, new { @class = "btn btn-sm btn-success" })
                                             }
                                             else
                                             {
-                                                @Html.ActionLink("Lock", "LockUser", "UserAdministration", new { id = user.UserId, area = "Backoffice" }, new {@class="btn btn-sm btn-warning"})
+                                                @Html.ActionLink("Lock", "LockUser", "UserAdministration", new { id = user.UserId, area = "Backoffice" }, new { @class = "btn btn-sm btn-warning" })
                                             }
                                         </td>
-                                        <td></td>
-                                        <td></td>
+                                
                                     </tr>
                                 }
                             </tbody>
