commit for https://github.com/mitsbits/Ubik/issues/10

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
@@ -1,5 +1,14 @@
-﻿@using Ubik.Web.Auth.ViewModels
-@model Ubik.Web.Auth.Contracts.IHasRolesToSelect
+﻿@using Ubik.Web.Auth
+@using Ubik.Web.Auth.Contracts
+@model IHasRolesToSelect
+@{
+    var operations = new SystemClaims.Operations();
+    var availableClaims = Model.AvailableRoles.SelectMany(r => r.AvailableClaims).ToArray();
+    var resources = availableClaims.Where(x => x.Type == SystemClaims.OperationToResourceClaimType).Select(x => x.Value.Split(new[] { '|' }).Last()).Distinct().OrderBy(x => x).ToList();
+
+    AddBackofficeBottom("UserAdministration/users");
+    
+}
 <div class="box box-solid">
     <div class="box-header">
         <h3 class="box-title">User Roles</h3>
@@ -13,7 +22,7 @@
                     @Html.HiddenFor(m => m.AvailableRoles[index].Name)
                     @Html.HiddenFor(m => m.AvailableRoles[index].RoleId)
                     @Html.HiddenFor(m => m.AvailableRoles[index].IsSytemRole)
-                    @Html.EditorFor(m => m.AvailableRoles[index].IsSelected)
+                    @Html.CheckBoxFor(m => m.AvailableRoles[index].IsSelected, new { @class = "option-role", data_id = role.Name })
                     <label for="@Html.IdFor(m => m.AvailableRoles[index].IsSelected)">
                         @if (role.IsSytemRole)
                         {
@@ -29,4 +38,42 @@
             }
         </div>
     </div>
+
+
+    <div class="box-body no-padding">
+        <table class="table table-bordered table-striped">
+            <tr>
+                <th>
+
+                </th>
+                @foreach (var operation in operations)
+                {
+                    <th>
+                        <span>@operation</span>
+                    </th>
+                }
+            </tr>
+
+            @foreach (var resource in resources)
+            {
+                <tr>
+                    <td> <strong> @resource</strong></td>
+                    @foreach (var operation in operations)
+                    {
+                        var claim = availableClaims.FirstOrDefault(x => x.Value == string.Format("{0}|{1}", operation, resource));
+                        var index = Array.IndexOf(availableClaims, claim);
+                        <td data-id="@availableClaims[index].Value">
+                            @Html.HiddenFor(m => availableClaims[index].Value)
+                            @Html.HiddenFor(m => availableClaims[index].Type)
+                            <input type="checkbox" name="@Html.NameFor(m => availableClaims[index].IsSelected)" data-id="@availableClaims[index].Value" class="option-claim" />
+                        </td>
+                    }
+                </tr>
+            }
+
+        </table>
+    </div>
+
+
+
 </div>
