auth enhancements, attributes and sign in helper

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
@@ -291,7 +291,7 @@
                         <img src="@Url.Content("~/Areas/BackOffice/Content/img/avatar3.png")" class="img-circle" alt="User Image" />
                     </div>
                     <div class="pull-left info">
-                        <p>Hello, Jane</p>
+                        <p>Hello, @User.Identity.Name</p>
                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                     </div>
                 </div>
