--- a/Ubik.UI.MVC/Views/Account/Login.cshtml
+++ b/Ubik.UI.MVC/Views/Account/Login.cshtml
@@ -1,5 +1,7 @@
-﻿@{
+﻿@model Ubik.UI.MVC.Models.LoginViewModel
+@{
     Layout = null;
+
 }
 <!DOCTYPE html>
 <html class="bg-black">
@@ -16,16 +18,23 @@
 <body class="bg-black">
     <div class="form-box" id="login-box">
         <div class="header">Sign In</div>
-        <form action="../../index.html" method="post">
+
+        @using (Html.BeginForm("LogIn", "Account", FormMethod.Post, new { role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <input name="ReturnUrl" type="hidden" value="@ViewBag.ReturnUrl" />
             <div class="body bg-gray">
                 <div class="form-group">
-                    <input type="text" name="userid" class="form-control" placeholder="User ID" />
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "User ID" })
+                    @Html.ValidationMessageFor(m => m.Email)
                 </div>
                 <div class="form-group">
-                    <input type="password" name="password" class="form-control" placeholder="Password" />
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                    @Html.ValidationMessageFor(m => m.Password)
+
                 </div>
                 <div class="form-group">
-                    <input type="checkbox" name="remember_me" /> Remember me
+                    @Html.CheckBoxFor(m => m.RememberMe) @Html.LabelFor(m => m.RememberMe)
                 </div>
             </div>
             <div class="footer">
@@ -33,7 +42,7 @@
                 @*<p><a href="#">I forgot my password</a></p>
                     <a href="@Url.Action("Register", "Pages")" class="text-center">Register a new membership</a>*@
             </div>
-        </form>
+        }
         @*<div class="margin text-center">
                 <span>Sign in using social networks</span>
                 <br />
