--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml
@@ -7,6 +7,9 @@
     var availableClaims = Model.AvailableRoles.SelectMany(r => r.AvailableClaims).ToArray();
     var resources = availableClaims.Where(x => x.Type == SystemClaims.OperationToResourceClaimType).Select(x => x.Value.Split(new[] { '|' }).Last()).Distinct().OrderBy(x => x).ToList();
 
+    Func<string, IEnumerable<RoleClaimViewModel>> claimsForGroup = (@group) => availableClaims.Where(x => string.Join(" - ", x.ResourceGroups) == @group).ToList();
+    Func<string, IEnumerable<string>> resourcesForGroup = (@group) => availableClaims.Where(x => x.Type == SystemClaims.OperationToResourceClaimType && string.Join(" - ", x.ResourceGroups) == @group).Select(x => x.Value.Split(new[] { '|' }).Last()).Distinct().OrderBy(x => x).ToList();
+    
     AddBackofficeBottom("UserAdministration/users");
 
     var isCreateNewUser = Model as NewUserViewModel != null;
@@ -14,7 +17,9 @@
     {
         Model.AvailableRoles.Single(x => x.Name == SystemRoles.Backoffice).IsSelected = true;
     }
-    
+
+    var claimGroups = Model.AvailableRoles.SelectMany(r => r.AvailableClaims).Select(c => string.Join(" - ", c.ResourceGroups)).Distinct().ToList();
+
 }
 <div class="box box-solid">
     <div class="box-header">
@@ -45,42 +50,49 @@
             }
         </div>
     </div>
+    
+    @foreach (var @group in claimGroups)
+    {
 
 
-    <div class="box-body no-padding">
-        <table class="table table-bordered table-striped">
-            <tr>
-                <th>
 
-                </th>
-                @foreach (var operation in operations)
-                {
-                    <th>
-                        <span>@operation</span>
-                    </th>
-                }
-            </tr>
-
-            @foreach (var resource in resources)
-            {
+        <div class="box-body no-padding">
+            <div class="box-header">
+                <h3 class="box-title">@group</h3>
+            </div>
+            <table class="table table-bordered table-striped">
                 <tr>
-                    <td> <strong> @resource</strong></td>
+                    <th>
+                    </th>
                     @foreach (var operation in operations)
                     {
-                        var claim = availableClaims.FirstOrDefault(x => x.Value == string.Format("{0}|{1}", operation, resource));
-                        var index = Array.IndexOf(availableClaims, claim);
-                        <td data-id="@availableClaims[index].Value">
-                            @Html.HiddenFor(m => availableClaims[index].Value)
-                            @Html.HiddenFor(m => availableClaims[index].Type)
-                            <input type="checkbox" name="@Html.NameFor(m => availableClaims[index].IsSelected)" data-id="@availableClaims[index].Value" class="option-claim" />
-                        </td>
+                        <th>
+                            <span>@operation</span>
+                        </th>
                     }
                 </tr>
-            }
 
-        </table>
-    </div>
+                @foreach (var resource in resourcesForGroup(@group))
+                {
+                    <tr>
+                        <td> <strong> @resource</strong></td>
+                        @foreach (var operation in operations)
+                        {
+                            var claim = availableClaims.FirstOrDefault(x => x.Value == string.Format("{0}|{1}", operation, resource));
+                            var index = Array.IndexOf(availableClaims, claim);
+                            <td data-id="@availableClaims[index].Value">
+                                @Html.HiddenFor(m => availableClaims[index].Value)
+                                @Html.HiddenFor(m => availableClaims[index].Type)
+                                <input type="checkbox" name="@Html.NameFor(m => availableClaims[index].IsSelected)" data-id="@availableClaims[index].Value" class="option-claim" />
+                            </td>
+                        }
+                    </tr>
+                }
+
+            </table>
+        </div>
 
 
-
+    }
 </div>
+    
