--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ubik.Web.Components
-@using Ubik.Web.Components.ViewModels
+@using Ubik.Web.Components.AntiCorruption.ViewModels
 @model DeviceViewModel
 
 <aside class="right-side">
@@ -19,10 +19,9 @@
     <section class="content">
         <div class="row">
 
-
             <div class="col-md-6">
                 <div class="box box-primary">
-                    @using (Html.BeginForm((Model.Id == default(int)) ? "UpdateDevice" : "CreateDevice", "Devices", FormMethod.Post, new { role = "form" }))
+                    @using (Html.BeginForm("UpdateLayout", "Devices", FormMethod.Post, new { role = "form" }))
                     {
                         @Html.AntiForgeryToken()
                     <!-- left column -->
@@ -43,7 +42,6 @@
                                         </span>
                                     </span>
                                     @Html.TextBoxFor(m => m.FriendlyName, new { @class = "form-control", })
-
                                 </div>
                                 @Html.ValidationMessageFor(m => m.FriendlyName, "", new { @class = "" })
                             </div>
@@ -56,11 +54,11 @@
                                         </span>
                                     </span>
                                     <div class="form-control">
-                                        @foreach (var option in Enum.GetValues(typeof(DeviceRenderFlavor)))
+                                        @foreach (DeviceRenderFlavor option in Enum.GetValues(typeof(DeviceRenderFlavor)))
                                         {
                                             <div class="radio-inline">
                                                 <label>
-                                                    @Html.RadioButtonFor(m => m.Flavor, option, null) @option.ToString()
+                                                    @Html.RadioButtonFor(m => m.Flavor, option) @option.ToString()
                                                 </label>
                                             </div>
                                         }
@@ -78,14 +76,11 @@
                                         </span>
                                     </span>
                                     @Html.TextBoxFor(m => m.Path, new { @class = "form-control" })
-
                                 </div>
                                 @Html.ValidationMessageFor(m => m.Path, "", new { @class = "" })
                             </div>
 
-
                             <div class="form-group">
-
                             </div>
                         </div>
                         <div class="box-footer clearfix">
@@ -95,9 +90,10 @@
                         </div>
                     }
                 </div>
-
-
-
+                @if (Model.Id != default(int))
+                {
+                    @Html.Partial("Partials/SectionCreate", new SectionViewModel() { DeviceId = Model.Id, SectionId = default(int)})
+                }
             </div>
         </div>
     </section><!-- /.content -->
